// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a disabled icon button 1`] = `
<button
  aria-label="UserIcon"
  class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-125 iconButtonStyles-medium-131 iconButtonStyles-contained-126 Mui-disabled Mui-disabled"
  disabled=""
  tabindex="-1"
  type="button"
>
  <span
    class="MuiIconButton-label"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </span>
</button>
`;

exports[`Button component renders a flat button on dark background 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root buttonStyles-root-58 MuiButton-text buttonStyles-text-59 buttonStyles-textDarkBg-63 MuiButton-textPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label buttonStyles-label-61"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders a small icon button 1`] = `
<button
  aria-label="UserIcon"
  class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-106 iconButtonStyles-small-111 iconButtonStyles-contained-107"
  tabindex="0"
  type="button"
>
  <span
    class="MuiIconButton-label"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders an colored outlined button on dark background 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root buttonStyles-root-39 MuiButton-outlined MuiButton-outlinedPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label buttonStyles-label-42"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders an icon button 1`] = `
<button
  aria-label="User"
  class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-87 iconButtonStyles-medium-93 iconButtonStyles-contained-88"
  tabindex="0"
  type="button"
>
  <span
    class="MuiIconButton-label"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders an outlined button on dark background 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root buttonStyles-root-20 MuiButton-outlined buttonStyles-outlinedDarkBg-26 MuiButton-outlinedPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label buttonStyles-label-23"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders correctly 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-3 MuiButton-containedPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label buttonStyles-label-4"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;
